--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
         HALON_REPO_USER: ${HALON_REPO_USER}
         HALON_REPO_PASS: ${HALON_REPO_PASS}
     volumes:
-      - ../:/suppression
+      - ../:/suppression-list
       - ./smtpd/dist:/etc/halon
       - halon-spool:/var/spool/halon
 volumes:
