--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
 PROJECT("suppression-list" VERSION 1.2.1)
 
-# RPM/DEB and CENTOS7/CENTOS8/ROCKY9/UBU2004/UBU2204/UBU2404
+# RPM/DEB and CENTOS7/CENTOS8/ROCKY9/UBU2004/UBU2204/UBU2404/AZURE3
 IF (EXISTS "${CMAKE_CURRENT_BINARY_DIR}/OSRELEASE.txt")
 	FILE(STRINGS ${CMAKE_CURRENT_BINARY_DIR}/OSRELEASE.txt OSRELEASE)
 ELSEIF (EXISTS "/OSRELEASE.txt")
@@ -23,12 +23,23 @@ ELSEIF (OSRELEASE MATCHES "UBU2204")
 	SET(CPACK_GENERATOR "DEB")
 ELSEIF (OSRELEASE MATCHES "UBU2404")
 	SET(CPACK_GENERATOR "DEB")
+ELSEIF (OSRELEASE MATCHES "AZURE3")
+	SET(CPACK_GENERATOR "RPM")
 ELSE()
 	MESSAGE(FATAL_ERROR "Invalid OSRELEASE")
 ENDIF()
 
 SET(CMAKE_BUILD_TYPE Release)
 SET(CMAKE_CXX_FLAGS_RELEASE "-std=c++17 -Wall -Wvla -Wshadow -Wconversion -Wno-sign-conversion -Wno-c++11-narrowing -O2 -fno-strict-aliasing -Wextra -Wno-unused-parameter")
+
+IF (OSRELEASE MATCHES "AZURE3")
+	INCLUDE_DIRECTORIES(
+		/external/include
+	)
+	LINK_DIRECTORIES(
+		/external/lib
+	)
+ENDIF()
 
 ADD_LIBRARY(suppression-list SHARED
 	suppression-list.cpp
@@ -75,7 +86,11 @@ IF (CPACK_GENERATOR MATCHES "DEB")
 	SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/postinst;${CMAKE_CURRENT_SOURCE_DIR}/postrm")
 ENDIF()
 IF (CPACK_GENERATOR MATCHES "RPM")
-	SET(CPACK_RPM_PACKAGE_AUTOREQPROV ON)
+	IF (OSRELEASE MATCHES "AZURE3")
+		SET(CPACK_RPM_PACKAGE_AUTOREQPROV OFF)
+	ELSE()
+		SET(CPACK_RPM_PACKAGE_AUTOREQPROV ON)
+	ENDIF()
 	SET(CPACK_RPM_PACKAGE_REQUIRES "halon >= 5.10")
 	SET(CPACK_RPM_POST_INSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/postinst")
 	SET(CPACK_RPM_POST_UNINSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/postrm")
