Migrate to pcre2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
+PROJECT("suppression-list" VERSION 2.0.0)
 
-PROJECT("suppression-list" VERSION 1.2.1)
+INCLUDE(FindPkgConfig)
+PKG_CHECK_MODULES(LIBPCRE2 REQUIRED libpcre2-8)
 
 # RPM/DEB and CENTOS7/CENTOS8/ROCKY9/UBU2004/UBU2204/UBU2404/AZURE3
 IF (EXISTS "${CMAKE_CURRENT_BINARY_DIR}/OSRELEASE.txt")
@@ -32,21 +34,12 @@ ENDIF()
 SET(CMAKE_BUILD_TYPE Release)
 SET(CMAKE_CXX_FLAGS_RELEASE "-std=c++17 -Wall -Wvla -Wshadow -Wconversion -Wno-sign-conversion -Wno-c++11-narrowing -O2 -fno-strict-aliasing -Wextra -Wno-unused-parameter")
 
-IF (OSRELEASE MATCHES "AZURE3")
-	INCLUDE_DIRECTORIES(
-		/external/include
-	)
-	LINK_DIRECTORIES(
-		/external/lib
-	)
-ENDIF()
-
 ADD_LIBRARY(suppression-list SHARED
 	suppression-list.cpp
 )
 
 TARGET_LINK_LIBRARIES(suppression-list
-	pcrecpp
+	${LIBPCRE2_LIBRARIES}
 )
 
 SET_TARGET_PROPERTIES(suppression-list PROPERTIES PREFIX "")
@@ -81,17 +74,17 @@ SET(CMAKE_INSTALL_PREFIX "/opt/halon")
 SET(CPACK_PACKAGING_INSTALL_PREFIX "/opt/halon")
 
 IF (CPACK_GENERATOR MATCHES "DEB")
-	SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
-	SET(CPACK_DEBIAN_PACKAGE_DEPENDS "halon (>= 5.10)")
+	SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS OFF)
+	SET(CPACK_DEBIAN_PACKAGE_DEPENDS "halon (>= 5.10), libpcre2-8-0")
 	SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/postinst;${CMAKE_CURRENT_SOURCE_DIR}/postrm")
 ENDIF()
 IF (CPACK_GENERATOR MATCHES "RPM")
+	SET(CPACK_RPM_PACKAGE_AUTOREQPROV OFF)
 	IF (OSRELEASE MATCHES "AZURE3")
-		SET(CPACK_RPM_PACKAGE_AUTOREQPROV OFF)
+		SET(CPACK_RPM_PACKAGE_REQUIRES "halon >= 5.10, libpcre2-8-0")
 	ELSE()
-		SET(CPACK_RPM_PACKAGE_AUTOREQPROV ON)
+		SET(CPACK_RPM_PACKAGE_REQUIRES "halon >= 5.10, pcre2")
 	ENDIF()
-	SET(CPACK_RPM_PACKAGE_REQUIRES "halon >= 5.10")
 	SET(CPACK_RPM_POST_INSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/postinst")
 	SET(CPACK_RPM_POST_UNINSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/postrm")
 ENDIF()
