--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,10 +4,8 @@ LABEL org.opencontainers.image.authors="support@halon.io"
 ARG HALON_REPO_USER
 ARG HALON_REPO_PASS
 
-RUN apt-get update
-
-RUN apt-get install -y wget gnupg
-RUN apt-get install -y apt-transport-https
+RUN apt-get update && apt-get install -y wget gnupg
+RUN apt-get update && apt-get install -y apt-transport-https
 
 RUN wget -qO - https://raw.githubusercontent.com/halon/changelog/master/pgp-keys/7F0A73B5.asc | apt-key add -
 RUN echo "deb https://repo.halon.io/ focal stable" >> /etc/apt/sources.list.d/halon.list
@@ -17,12 +15,12 @@ RUN apt-get update && apt-get install -y halon=5.10.0
 RUN /usr/bin/install -d /var/run/halon
 ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH
 
-RUN apt-get install -y build-essential cmake git libpcre3-dev
+RUN apt-get update && apt-get install -y build-essential cmake git pkg-config libpcre2-dev
 
 RUN echo -n "UBU2004" > /OSRELEASE.txt
 
 RUN mkdir /var/log/halon && chown halon:halon /var/log/halon
 
-RUN apt-get install -y supervisor
+RUN apt-get update && apt-get install -y supervisor
 COPY ./supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 CMD ["/usr/bin/supervisord"]
